--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/dogdb
 spring.datasource.username=root
-spring.datasource.password=Dani2002!
+spring.datasource.password=asd123!
 
